# Unit tests for tf2 Bazel rules

# Aggregate test suite - use 'bazel test //tests/unit/...' to run all unit tests
# Empty because unittest.suite() doesn't support visibility on generated test_suites
test_suite(
    name = "all_unit_tests",
    tests = [],
    visibility = ["//visibility:public"],
)
