"""Terraform execution rules"""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files(glob(["*.bzl"]))

bzl_library(
    name = "tf_cloud_runner",
    srcs = ["tf_cloud_runner.bzl"],
)

bzl_library(
    name = "tf_runner",
    srcs = ["tf_runner.bzl"],
)

bzl_library(
    name = "runner_common",
    srcs = ["runner_common.bzl"],
)

bzl_library(
    name = "provider_versions",
    srcs = ["provider_versions.bzl"],
)