# Internal shared utilities
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//tf2:__subpackages__"])

bzl_library(
    name = "file_ops",
    srcs = ["file_ops.bzl"],
)

bzl_library(
    name = "staging",
    srcs = ["staging.bzl"],
    deps = [
        ":file_ops",
    ],
)

bzl_library(
    name = "organization",
    srcs = ["organization.bzl"],
    deps = [
        "//tf2/tools/runners:shell_utils",
    ],
)

bzl_library(
    name = "sources_validation",
    srcs = ["sources_validation.bzl"],
    deps = [
        "//tf2/tools/runners:shell_utils",
    ],
)

bzl_library(
    name = "docs_collection",
    srcs = ["docs_collection.bzl"],
    deps = [
        "//tf2/providers/core:info",
    ],
)
