# Public API macros for Terraform rules
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//tf2:__subpackages__"])

bzl_library(
    name = "tf_module",
    srcs = ["tf_module.bzl"],
    deps = [
        "//tf2/internal:organization",
        "//tf2/internal:sources_validation",
        "//tf2/tfcore:deps",
        "//tf2/tfcore:export",
        "//tf2/tfcore:module",
        "//tf2/tfcore:test",
        "//tf2/tfcore:validate",
        "//tf2/tfcore/versions",
        "//tf2/tfcore/versions:lockfile",
        "//tf2/tfdocs:generator",
        "//tf2/tflint:config",
        "//tf2/tflint:format",
        "//tf2/tflint:test",
        "//tf2/tflint:validate",
    ],
)
