"""Terraform execution runners"""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files(glob(["*.bzl"]))

bzl_library(
    name = "tf_runner",
    srcs = ["tf_runner.bzl"],
    deps = [
        "//tf2/tools/runners:terraform",
        "//tf2/internal/utils:runfiles",
    ],
)