load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files(glob(["*.bzl"]))

bzl_library(
    name = "validate",
    srcs = ["validate.bzl"],
)

bzl_library(
    name = "format",
    srcs = ["format.bzl"],
)

bzl_library(
    name = "lint",
    srcs = ["lint.bzl"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
)

bzl_library(
    name = "docs",
    srcs = ["docs.bzl"],
)

bzl_library(
    name = "module_deps",
    srcs = ["module_deps.bzl"],
)

bzl_library(
    name = "organization",
    srcs = ["organization.bzl"],
)

bzl_library(
    name = "lockfile",
    srcs = ["lockfile.bzl"],
)

bzl_library(
    name = "test",
    srcs = ["test.bzl"],
)

bzl_library(
    name = "tflint_defaults",
    srcs = ["tflint_defaults.bzl"],
)

bzl_library(
    name = "tflint_rules",
    srcs = ["tflint_rules.bzl"],
)